--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven on Linux
+name: Java CI with Maven, Docker and SonarCloud in Linux
 
 on:
     push:
@@ -13,17 +13,31 @@ jobs:
         name: Build with Java 17 on Linux
         steps:
         - uses: actions/checkout@v4
+          with:
+            fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
         - name: Set up JDK 17
           uses: actions/setup-java@v4
           with:
             java-version: 17
-            distribution: 'temurin'
+            distribution: 'temurin'        
         - name: Cache Maven packages
           uses: actions/cache@v4
           with:
-            path: ~/.m2
+            path: |
+                 ~/.m2
+                 ~/.sonar/cache
             key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml', '**/*.yml') }}
             restore-keys: ${{ runner.os }}-m2-
+        - name: Set Maven Additional Goals
+          run: |
+            echo "SONARGOAL=sonar:sonar" >> $GITHUB_ENV
+          if: ${{env.SONAR_TOKEN}}
         - name: Build with Maven
-          run: xvfb-run mvn verify
+          run: > 
+            xvfb-run mvn verify -Pjacoco $SONARGOAL
+            -Dsonar.organization=nicopolazzi-github
+            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.projectKey=NicoPolazzi_school-example
           working-directory: ${{env.workdir}}
+          env:
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
