--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,6 +8,7 @@ jobs:
     build:
         runs-on: ubuntu-latest
         env:
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
             workdir: school
                 
         name: Build with Java 17 on Linux
@@ -32,7 +33,7 @@ jobs:
           run: |
             echo "SONARGOAL=sonar:sonar" >> $GITHUB_ENV
           if: ${{env.SONAR_TOKEN}}
-        - name: Build with Maven
+        - name: Build with Maven and SonarCloud
           run: > 
             xvfb-run mvn verify -Pjacoco $SONARGOAL
             -Dsonar.organization=nicopolazzi-github
@@ -40,4 +41,5 @@ jobs:
             -Dsonar.projectKey=NicoPolazzi_school-example
           working-directory: ${{env.workdir}}
           env:
+            # needed bacause xvfb use a subshell that does not inherit job-level envs correctly
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
